v0.6.0 (2012-08-21)
======================
	-- TODO


v0.5.0 (2012-08-20)
======================
	-- fix xpra_launcher
	-- new packet encoder written in C (much faster and data is now smaller too) 
	-- read provided /etc/xpra/xpra.conf and user's own ~/.xpra/xpra.conf
	-- support Xdummy out of the box on platforms with recent enough versions of Xorg (and not installed suid)
	-- pass dpi to server and allow clients to specify dpi on the command line
	-- fix xsettings endianness problems
	-- fix clipboard tokens sent twice on start
	-- new command line options and UI to disable notifications forwarding, cursors and bell
	-- MS Windows clients can now choose the remote clipboard they sync with ('clipboard', 'primary' or 'secondary')
	-- x264: adapt colourspace conversion, encoding speed and picture quality according to link and encoding/decoding performance
	-- automatically change video encoding: handle small region updates (ie: blinking cursor or spinner) without doing a full video frame refresh
	-- fairer window batching calculations, better performance over low latency links and bandwidth constrained links
	-- lower tcp socket connection timeout (10 seconds)
	-- better compression of cursor data
	-- log date and time with messages, better log messages (ie: "Ignoring ClientMessage..")
	-- send more client and server version information (python, gtk, etc)
	-- build cleanups: let distutils clean take care of removing all generated .c files
	-- code cleanups: move all win32 specific headers to win32 tree, fix vpx compilation warnings, whitespace, etc
	-- more reliable MS Windows build: detect missing/wrong DLLs and abort
	-- removed old "--no-randr" option
	-- drop compatibility with versions older than 0.3: we now assume the "raw_packets" feature is supported


v0.4.2 (2012-08-16)
======================

	-- fix clipboard atom packing (was more noticeable with qt and Java applications)